2004-04-18  Chris Abbey  <jikes@cabbey.net>

	Release 1.20.

2004-04-17  Eric Blake  <ebb9@byu.net>

	* src/m4/ac_cxx_exceptions.m4: Delete - this file is no longer
	needed, because jikes doesn't use exceptions.
	* src/Makefile.in: Regenerate.

2004-04-16  Chris Abbey  <jikes@cabbey.net>

	* src/Makefile.in: trivial hand patch, looks like  src/m4/
	was not up to date the last time this was regen'd.

2004-04-15  Eric Blake  <ebb9@byu.net>

	* NEWS: More news blurbs.
	* configure.ac: Bump jikes version, and update to automake 1.8.3.
	* config.guess: Regenerate.
	* config.sub: Regenerate.
	* configure: Regenerate.
	* install-sh: Regenerate.
	* mkinstalldirs: Regenerate.

2004-04-14  Chris Abbey	 <jikes@cabbey.net>

	* src/error.cpp (SemanticError::InitializeMessageGroups): turn
	the defaults down for Effective Java and Naming Conventions
	diagnostics.

2004-04-14  Eric Blake  <ebb9@byu.net>

	* NEWS: My shot at 1.20 release notes.

2004-04-13  Chris Abbey  <jikes@cabbey.net>

	* src/symbol.ccp: revert to using strcmp and wcscmp instead of
	comparing just the first char. Fixes bug 3920. Thanks to Elliott
	for pointing out the subtle difference of the equivalent to
	changing from s.equals(".") to s.startsWith(".").

2004-04-12  Eric Blake  <ebb9@byu.net>

	* src/error.h (STATIC_TYPE_ACCESSING_MEMBER_TYPE): New error.
	* src/error.cpp: Ditto.
	* src/decl.cpp (FindType): Emit it when appropriate.

2004-04-11  Eric Blake  <ebb9@byu.net>

	* src/symbol.cpp (UnlinkFromParents): Fix compile-time error with
	poor choice of identifier.

2004-04-11  Elliott Hughes  <enh@acm.org>

	* AUTHORS: Credit where credit's due.

2004-04-11  Elliott Hughes  <enh@acm.org>

	* src/diagnose.cpp: Remove an extraneous endl that caused blank
	lines to appear in +E or +D output when there were syntax (rather
	than lexical or semantic) errors. There are still some cases where
	Jikes outputs extra blank lines in its regular output, but they're