@@ -2,6 +2,12 @@
 
 	Release 1.20.
 
+2004-04-17  Chris Abbey  <jikes@cabbey.net>
+
+	* src/expr.cpp: convert ExtremaForType, ReportOverflow, and 
+	CheckIntegerAddition from static to inline to allow compilation
+	on AIX.
+	
 2004-04-17  Eric Blake  <ebb9@byu.net>
 
 	* src/m4/ac_cxx_exceptions.m4: Delete - this file is no longer
